tests/declare_fun/declare_fun.exp
Error -------------------------------------------------------------- test.js:7:2

Error: test.js:7
  7: (foo(false): void); // error, boolean ~/~ undefined
      ^^^^^^^^^^ Cannot cast `foo(...)` to undefined because boolean [1] is incompatible with undefined [2].
  References:
    7: (foo(false): void); // error, boolean ~/~ undefined
            ^^^^^ [1]: boolean
    7: (foo(false): void); // error, boolean ~/~ undefined
                    ^^^^ [2]: undefined


Found 1 error
